--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
   <title> Prepare </title>
   <meta charset="UTF-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7M4KDW6WHX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7M4KDW6WHX');
+</script>
   </head>
 
 <body>
@@ -12,6 +21,9 @@
   <li><a href="2.html">운동이라는</a></li>
   </ol>
 
+<p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/lTRiuFIWV54" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
 
 <h2>공부시작에 앞서</h2>
 그날 항상 뭘할건지소화할 수 있는 한도내에서 계획을 잡고 시작해야된다.
