--- a/2.html
+++ b/2.html
@@ -3,6 +3,15 @@
 <head>
   <title> excercise </title>
   <meta charset="UTF-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7M4KDW6WHX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7M4KDW6WHX');
+</script>
   </head>
 
 <body>
